# wordle-solver

./: README.md  hist.py  pyproject.toml  solve.py
