[tool.poetry]
name = "wordle_solver"
version = "0.1.0"
description = ""
authors = ["tall-josh <joshua.d.patterson1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
ipython = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
